k8s/incident/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-demo
  namespace: incident-demo
  labels:
    app: incident-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: incident-demo
  template:
    metadata:
      labels:
        app: incident-demo
    spec:
      nodeSelector:
        workload: user
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: content
          configMap:
            name: incident-demo-content
