k8s/incident/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-demo
  namespace: incident-demo
  labels:
    app: wrong-incident-demo
spec:
  type: ClusterIP
  selector:
    app: incident-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
